With Marching Orders for Week 1

--- a/CMF-Week-1/index.qmd
+++ b/CMF-Week-1/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Choice and Forecasting"
+title: "Choice and Forecasting: Week 1"
 author: "Robert W. Walker"
 format: 
    revealjs:
@@ -501,4 +501,6 @@ Tidy.Titanic %$% table(Sex, Survived)
 Tidy.Titanic %$% table(Sex, Survived) %>% prop.test(.)
 Tidy.Titanic %$% chisq.test(Sex, Survived)
 ```
+# For Next Time:
 
+# Chapter 4: Regression Models
