Final commit for Week 1

--- a/CMF-Week-1/index.qmd
+++ b/CMF-Week-1/index.qmd
@@ -13,6 +13,7 @@ format:
      slide-number: c/t
      transition: zoom
      multiplex: true
+     preview-links: true
 ---
 
 # An Overview of Forecasting and Choice
