--- a/AllAboutSquares/index.Rmd
+++ b/AllAboutSquares/index.Rmd
@@ -22,7 +22,7 @@ class: center, middle
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
-knitr::opts_chunk$set(warning=FALSE, message=FALSE, comment=NA, prompt=FALSE, fig.height=6, fig.width=6.5, fig.retina = 3, dev = 'svg', dev.args = list(bg = "transparent"))
+knitr::opts_chunk$set(warning=FALSE, message=FALSE, comment=NA, prompt=FALSE, fig.height=6, fig.width=6.5, fig.retina = 3, dev = 'svg', dev.args = list(bg = "white"))
 library(xaringanthemer); library(kableExtra); library(tidyverse); library(skimr)
 style_duo_accent(
 primary_color = "#371142", 
@@ -32,7 +32,7 @@ primary_color = "#371142",
           code_font_google   = google_font("Fira Mono")
 )
 
-options(scipen=8)
+options(scipen=6)
 black.box.maker <- function(mod1) {
             d1 <- dim(mod1$model)[[1]]
             sumsq1 <- var(mod1$model[,1], na.rm=TRUE)*(d1-1)
